@@ -22,8 +22,8 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
-@Slf4j
 @RequiredArgsConstructor
+@Slf4j
 @Transactional(readOnly = true)
 public class RevenueServiceImpl implements RevenueService {
 
@@ -51,7 +51,7 @@ public class RevenueServiceImpl implements RevenueService {
 
         return RevenueStatisticsResponse.builder()
                 .totalOrders(totalOrders)
-                .deliveredOrders(totalOrders)
+                .deliveredOrders(totalOrders) // Vì mình chỉ lấy đơn DELIVERED
                 .totalRevenue(totalRevenue)
                 .averageOrderValue(averageOrderValue)
                 .chartData(chartData)
@@ -99,38 +99,10 @@ public class RevenueServiceImpl implements RevenueService {
         return calculateTopProducts(allOrders, limit);
     }
 
-    private List<TopProductResponse> calculateTopProducts(List<Order> orders, int limit) {
-        Map<Long, TopProductData> productMap = new HashMap<>();
-
-        for (Order order : orders) {
-            for (OrderItem item : order.getItems()) {
-                Long productId = item.getProduct().getId();
-                String productName = item.getProduct().getName();
-                Integer quantity = item.getQuantity();
-                BigDecimal itemTotal = item.getUnitPrice().multiply(BigDecimal.valueOf(quantity));
-
-                productMap.putIfAbsent(productId, new TopProductData(productId, productName));
-                TopProductData data = productMap.get(productId);
-                data.addSale(quantity, itemTotal);
-            }
-        }
-
-        return productMap.values().stream()
-                .sorted((a, b) -> Long.compare(b.soldCount, a.soldCount))
-                .limit(limit)
-                .map(data -> TopProductResponse.builder()
-                        .productId(data.productId)
-                        .productName(data.productName)
-                        .soldCount(data.soldCount)
-                        .totalRevenue(data.totalRevenue)
-                        .build())
-                .collect(Collectors.toList());
-    }
-
     @Override
     public RevenueStatisticsResponse getTodayRevenue(Long shopId) {
-        log.info("Lấy thống kê doanh thu hôm nay: shopId={}", shopId);
-
+        log.info("Lấy thống kê doanh thu hôm nay cho shop: {}", shopId);
+        
         LocalDate today = LocalDate.now();
         LocalDateTime startOfDay = today.atStartOfDay();
         LocalDateTime endOfDay = today.atTime(23, 59, 59);
@@ -139,9 +111,9 @@ public class RevenueServiceImpl implements RevenueService {
                 .stream()
                 .filter(order -> {
                     LocalDateTime created = order.getCreatedAt();
-                    return !created.isBefore(startOfDay) && !created.isAfter(endOfDay);
+                    return created != null && !created.isBefore(startOfDay) && !created.isAfter(endOfDay);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         Long totalOrders = (long) todayOrders.size();
         BigDecimal totalRevenue = todayOrders.stream()
@@ -157,63 +129,65 @@ public class RevenueServiceImpl implements RevenueService {
                 .deliveredOrders(totalOrders)
                 .totalRevenue(totalRevenue)
                 .averageOrderValue(averageOrderValue)
-                .chartData(Collections.singletonList(
-                        RevenueStatisticsResponse.DailyRevenueData.builder()
-                                .date(today.format(DateTimeFormatter.ISO_DATE))
-                                .orderCount(totalOrders)
-                                .revenue(totalRevenue)
-                                .build()
-                ))
                 .build();
     }
 
-    // ==================== PRIVATE METHODS ====================
+    // =========================================================
+    // Helper Methods
+    // =========================================================
 
     private List<RevenueStatisticsResponse.DailyRevenueData> groupByPeriod(List<Order> orders, String period) {
-        Map<String, RevenueStatisticsResponse.DailyRevenueData> periodMap = new LinkedHashMap<>();
+        Map<String, RevenueStatisticsResponse.DailyRevenueData> map = new TreeMap<>();
+        DateTimeFormatter formatter = getDateTimeFormatter(period);
 
-        for (Order order : orders) {
-            LocalDateTime createdAt = order.getCreatedAt();
-            String key;
-
-            if ("DAY".equalsIgnoreCase(period)) {
-                key = createdAt.format(DateTimeFormatter.ISO_DATE); // YYYY-MM-DD
-            } else if ("MONTH".equalsIgnoreCase(period)) {
-                key = YearMonth.from(createdAt).format(DateTimeFormatter.ofPattern("MM-yyyy")); // MM-YYYY
-            } else { // YEAR
-                key = String.valueOf(createdAt.getYear()); // YYYY
-            }
-
-            periodMap.putIfAbsent(key, RevenueStatisticsResponse.DailyRevenueData.builder()
-                    .date(key)
-                    .orderCount(0L)
-                    .revenue(BigDecimal.ZERO)
-                    .build());
-
-            RevenueStatisticsResponse.DailyRevenueData data = periodMap.get(key);
+        orders.forEach(order -> {
+            String key = order.getCreatedAt().format(formatter);
+            RevenueStatisticsResponse.DailyRevenueData data = map.getOrDefault(key,
+                    RevenueStatisticsResponse.DailyRevenueData.builder()
+                            .date(key)
+                            .orderCount(0L)
+                            .revenue(BigDecimal.ZERO)
+                            .build());
+            
             data.setOrderCount(data.getOrderCount() + 1);
             data.setRevenue(data.getRevenue().add(order.getTotalAmount()));
-        }
+            map.put(key, data);
+        });
 
-        return new ArrayList<>(periodMap.values());
+        return new ArrayList<>(map.values());
     }
 
-    // ==================== INNER CLASS ====================
+    private DateTimeFormatter getDateTimeFormatter(String period) {
+        return switch (period.toUpperCase()) {
+            case "MONTH" -> DateTimeFormatter.ofPattern("MM-yyyy");
+            case "YEAR" -> DateTimeFormatter.ofPattern("yyyy");
+            default -> DateTimeFormatter.ofPattern("dd-MM-yyyy"); // DAY
+        };
+    }
 
-    private static class TopProductData {
-        Long productId;
-        String productName;
-        Long soldCount = 0L;
-        BigDecimal totalRevenue = BigDecimal.ZERO;
+    private List<TopProductResponse> calculateTopProducts(List<Order> orders, int limit) {
+        Map<Long, TopProductResponse> productStats = new HashMap<>();
 
-        TopProductData(Long productId, String productName) {
-            this.productId = productId;
-            this.productName = productName;
+        for (Order order : orders) {
+            for (OrderItem item : order.getItems()) {
+                Long productId = item.getProduct().getId();
+                TopProductResponse stats = productStats.getOrDefault(productId,
+                        TopProductResponse.builder()
+                                .productId(productId)
+                                .productName(item.getProductName())
+                                .soldCount(0L)
+                                .totalRevenue(BigDecimal.ZERO)
+                                .build());
+                
+                stats.setSoldCount(stats.getSoldCount() + item.getQuantity());
+                stats.setTotalRevenue(stats.getTotalRevenue().add(item.getLineTotal()));
+                productStats.put(productId, stats);
+            }
         }
 
-        void addSale(Integer quantity, BigDecimal revenue) {
-            this.soldCount += quantity;
-            this.totalRevenue = this.totalRevenue.add(revenue);
-        }
+        return productStats.values().stream()
+                .sorted(Comparator.comparing(TopProductResponse::getSoldCount).reversed())
+                .limit(limit)
+                .toList();
     }
 }
